* vm_insnhelper.c (vm_call_super_method): remove volatile introduced   in r38365.

* vm_insnhelper.c (vm_call_method): use __forceinline to prevent
  VC to make vm_call_general and vm_call_super_method as the same
  method.  Thanks, Heesob Park.  [Bug #7556] [ruby-core:50867]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@38377 b2dd03c8-39d4-4d8f-98ff-823fe69b080e